# lemonade

./: .gitignore  CMakeLists.txt  README.md
examples/reverb/: CMakeLists.txt  main.cpp
examples/vst/: CMakeLists.txt  main.cpp
include/: ExternalPlugin.h  JuceHeader.h  JucePlugin.h  JuceUtils.h  Plugin.h  bar.h  lemonade.h
include/ade_plugins/: Chorus.h  Compressor.h  Limiter.h  Reverb.h
include/plugins/: Reverb.h
libs/foo/: CMakeLists.txt
libs/foo/include/foo/: foo.h
libs/foo/src/: foo.cpp
src/: bar.cpp  lemonade.cc  main.cpp
